deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ikindle
  labels:
    name: ikindle
    app.kubernetes.io/part-of: ikindle
