deploy/k8s/41-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: ikindle
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
